# text-spotting-as-a-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  spot-text.py
model/: detectron2_config.yaml
rumsey-finetune/: Base_det.yaml  final_rumsey.yaml
src/: inference.py  utils.py
